--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,12 @@
 body {
-  margin: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+ .backgroundIMG{
+  z-index: -1;
+  background-color: #070143;
 }
 
 
