--- a/client/styles/Footer.css
+++ b/client/styles/Footer.css
@@ -1,14 +1,11 @@
 
 .rootFooter {
-    display: flex;
-    height: 100vh;
-    align-items: flex-end;
+
 }
 
 .footerLink {
     display: flex;
-    position: relative;
     background-color: #020524;
-    justify-content: center;
-    width: 100%;
+    flex-direction: column;
+    align-items: center;
 }
