--- a/client/styles/Landing.css
+++ b/client/styles/Landing.css
@@ -1,20 +1,67 @@
-.landingPage {
-    display: flex;
-    height: 100vh;
-    align-items: center;
-    background-color: #070143;
-  
-  }
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Macondo+Swash+Caps&family=Rubik+Broken+Fax&display=swap");
+
   
   .landingBody {
     color: rgb(255, 255, 255);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
   
   .landingContent {
     text-align: center;
+    margin: 2%;
+  }
+  .landingContent button {
+    margin: 2%;
+  }
+  .landingContent h1 {
+    font-family: 'Rubik Broken Fax', sans-serif;
+    font-size: 333%;
+    margin: 2%;
+  }
+  .landingContent h4 {
+    font-family: "Macondo Swash Caps", cursive;
+    margin: 2%;
   }
   
   .signUpButton {
+    font-size: 75%;
     background-color: #FB2576;
     color: white;
+    border-radius: 0.375rem;
+    border-style: solid;
+    border-color: #FB2576;
+    height: 2rem;
+    width: 4rem;
+  }
+
+  .rootCreators {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .creatorListItem {
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    padding: 2%;
+  }
+
+  .creatorsList {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 2%;
+    padding: 2%;
+  }
+
+  .creatorsTitle {
+    margin: 2%;
+    padding: 2%;
+    font-family: "Macondo Swash Caps", cursive;
+    font-weight: bold;
   }
