--- a/client/styles/Category.css
+++ b/client/styles/Category.css
@@ -29,6 +29,7 @@
 }
 
 .editButton {
+
     position: relative;
     background-color: #04AA6D;
     border: none;
@@ -41,6 +42,7 @@
     text-decoration: none;
     overflow: hidden;
     cursor: pointer;
+    margin: 10px;
 }
 
 .deleteButton{
@@ -57,6 +59,7 @@
     overflow: hidden;
     cursor: pointer;
     border-radius: 20px;
+    padding: 5px;
 }
 
 
