--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,16 @@
 
+button:hover {
+  border-color: #0d6efd;
+  background-color: #0d6efd;
+  opacity: 70%;
+}
+
 
  .backgroundIMG{
-  z-index: -1;
+  display: flex;
   background-color: #070143;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 
