--- a/client/styles/Landing.css
+++ b/client/styles/Landing.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Macondo+Swash+Caps&family=Rubik+Broken+Fax&display=swap");
 
   
+  .landingPage {
+    padding-top: 15%;
+    padding-bottom: 10%;
+  }
   .landingBody {
     color: rgb(255, 255, 255);
     height: 100vh;
@@ -53,15 +57,19 @@
 
   .creatorsList {
     display: flex;
-    align-items: center;
     flex-direction: column;
     margin: 2%;
     padding: 2%;
   }
+  .creatorsList a {
+    display: flex;
+    align-items: center;
+    margin: 7%;
+  }
 
   .creatorsTitle {
-    margin: 2%;
     padding: 2%;
     font-family: "Macondo Swash Caps", cursive;
     font-weight: bold;
+    font-size: 150%;
   }
