--- a/client/styles/Login.css
+++ b/client/styles/Login.css
@@ -1,3 +1,12 @@
+
+
+.loginTitle {
+    color: white;
+    font-family: "Macondo Swash Caps", cursive;
+    font-weight: bold;
+    margin-bottom: 10%;
+}
+
 .rootLogin {
     height: 100vh;
     display: flex;
@@ -10,6 +19,8 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10%;
+    margin-top: 10%;
 }
 
 .submitButton {
