--- a/client/styles/Register.css
+++ b/client/styles/Register.css
@@ -1,4 +1,10 @@
 
+.registerTitle {
+    color: white;
+    font-family: "Macondo Swash Caps", cursive;
+    font-weight: bold;
+    margin-bottom: 10%;
+}
 
 .rootRegister {
     display: flex;
@@ -12,9 +18,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 10%;
 }
-
-
 
 .input-group {
     height: 3rem;
